# tables

./: .clang-format  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cli.cpp
tables-api/: CMakeLists.txt
tables-api/include/: card.h  cards.h  constants.h  deal.h  deck_state.h  make_move.h
tables-api/include/enum/: deal_status.h  move_status.h  rank.h  suit.h
tables-api/src/: card.cpp  deal.cpp  deck_modifier.cpp  deck_modifier.h  deck_state.cpp  deck_state_impl.cpp  deck_state_impl.h  make_move.cpp
tables-api/src/enum/: deal_status.h
tables-api/src/util/: make_full_deck.cpp  make_full_deck.h
tables-api/test/: CMakeLists.txt
tables-api/test/unit/: CMakeLists.txt  test_deal.cpp
